mudei a informação de "quebra' para "quebrou"ra "

--- a/Escolha-gui/gameovergui.html
+++ b/Escolha-gui/gameovergui.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="para">
-        <p>"A bike quebra"</p>
+        <p>"A bike quebrou"</p>
         <img src="./imagens/game-over.jpg">
     </div>  
     <div>
