Mudança importante no codigo

--- a/Escolha-gui/gameovergui.html
+++ b/Escolha-gui/gameovergui.html
@@ -13,7 +13,7 @@
         <img src="./imagens/game-over.jpg">
     </div>  
     <div>
-        <a class="botao" href="../principal.html"> JOGAR NOVAMENTE</a><br><br>
+        <a class="botao" href="../index.html"> JOGAR NOVAMENTE</a><br><br>
     </div>
           
 </body>
