--- a/Escolha-gus/vitoria.html
+++ b/Escolha-gus/vitoria.html
@@ -13,7 +13,7 @@
         <img src="./imagens/palmas.png">
     </div>   
     <div>
-        <a  class="botao" href="../principal.html" >JOGAR NOVAMENTE</a>
+        <a  class="botao" href="../index.html" >JOGAR NOVAMENTE</a>
     </div> 
 </body>
 </html>
